# adaptemoji-telegram

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: main.rs
