[package]
name = "adaptemoji-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
image = "0.25"
reqwest = "0.12"
anyhow = "1.0"
adaptemoji = { version = "0.1", default-features = false }
